--- a/ui/wizard/ui_code_property.ui
+++ b/ui/wizard/ui_code_property.ui
@@ -98,7 +98,17 @@
     </widget>
    </item>
    <item row="2" column="0" colspan="5">
-    <widget class="QTableView" name="column_code_view"/>
+    <widget class="QTableView" name="column_code_view">
+     <property name="dragEnabled">
+      <bool>true</bool>
+     </property>
+     <property name="dragDropOverwriteMode">
+      <bool>false</bool>
+     </property>
+     <property name="dragDropMode">
+      <enum>QAbstractItemView::InternalMove</enum>
+     </property>
+    </widget>
    </item>
    <item row="0" column="2" colspan="3">
     <widget class="QComboBox" name="prefix_source_cbo">
@@ -152,6 +162,20 @@
     <widget class="QLabel" name="label_3">
      <property name="text">
       <string>Separtor:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="7" column="0" colspan="2">
+    <widget class="QLabel" name="hide_prefix_lbl">
+     <property name="text">
+      <string>Hide prefix:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="7" column="2">
+    <widget class="QCheckBox" name="hide_prefix_chk">
+     <property name="text">
+      <string/>
      </property>
     </widget>
    </item>
