--- a/resources.qrc
+++ b/resources.qrc
@@ -108,5 +108,7 @@
     <file>images/icons/advanced_search.png</file>
     <file>images/icons/expression.png</file>
       <file>images/icons/geometry_tools.png</file>
+    <file>images/icons/geometry_map_tool.png</file>
+
   </qresource>
 </RCC>
